--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "dev:server": "tsx server/index.ts",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build --mode production",
-    "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --minify",
+    "build:client": "vite build --mode production --emptyOutDir",
+    "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --minify --sourcemap=false",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
